# ChangeLog for sys-libs/db
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.275 2009/02/24 16:16:43 kumba Exp $

  24 Feb 2009; Joshua Kinard <kumba@gentoo.org> db-4.6.21_p3-r1.ebuild:
  Add ~mips to KEYWORDS

  07 Feb 2009; Mike Frysinger <vapier@gentoo.org> db-4.5.20_p2.ebuild,
  db-4.5.20_p2-r1.ebuild, db-4.6.21_p1.ebuild, db-4.6.21_p3.ebuild,
  db-4.6.21_p3-r1.ebuild, db-4.7.25.ebuild, db-4.7.25_p1.ebuild,
  db-4.7.25_p1-r1.ebuild:
  Use is-flagq rather than is-flag.

  07 Feb 2009; Mike Frysinger <vapier@gentoo.org> db-4.7.25_p1-r1.ebuild:
  Cleanup src_compile and src_install.

  07 Feb 2009; Mike Frysinger <vapier@gentoo.org> db-4.6.21_p1.ebuild,
  db-4.6.21_p3.ebuild, db-4.6.21_p3-r1.ebuild, db-4.7.25.ebuild,
  db-4.7.25_p1.ebuild, db-4.7.25_p1-r1.ebuild:
  Drop USE=bootstrap #256439.

  20 Sep 2008; Brent Baude <ranger@gentoo.org> db-3.2.9_p2.ebuild,
  db-4.2.52_p5-r1.ebuild, db-4.3.29_p1-r1.ebuild, db-4.5.20_p2-r1.ebuild:
  Mass stablization for ppc and ppc64 for bug 237127

  17 Sep 2008; Jeremy Olexa <darkside@gentoo.org> db-3.2.9_p2.ebuild,
  db-4.2.52_p5-r1.ebuild, db-4.3.29_p1-r1.ebuild, db-4.5.20_p2-r1.ebuild:
  amd64 stable. Thanks to Chad A. Simmons (amd64 AT) for testing, bug #237127

  17 Sep 2008; Raúl Porcel <armin76@gentoo.org> db-3.2.9_p2.ebuild,
  db-4.2.52_p5-r1.ebuild, db-4.3.29_p1-r1.ebuild, db-4.5.20_p2-r1.ebuild:
  ia64/sparc/x86 stable wrt #237127

  16 Sep 2008; Tobias Klausmann <klausman@gentoo.org>
  db-4.5.20_p2-r1.ebuild:
  Stable on alpha, bug #237127

  16 Sep 2008; Tobias Klausmann <klausman@gentoo.org>
  db-4.3.29_p1-r1.ebuild:
  Stable on alpha, bug #237127

  16 Sep 2008; Tobias Klausmann <klausman@gentoo.org>
  db-4.2.52_p5-r1.ebuild:
  Stable on alpha, bug #237127

  16 Sep 2008; Tobias Klausmann <klausman@gentoo.org> db-3.2.9_p2.ebuild:
  Stable on alpha, bug #237127

  16 Sep 2008; Jeroen Roovers <jer@gentoo.org> db-3.2.9_p2.ebuild,