@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/db-4.4.20_p4-r1.ebuild,v 1.2 2008/08/16 22:46:49 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/db-4.4.20_p4-r1.ebuild,v 1.3 2009/03/14 12:54:49 vapier Exp $
 
 EAPI="prefix"
 
@@ -29,7 +29,7 @@ done
 LICENSE="OracleDB"
 SLOT="4.4"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
-IUSE="tcl java doc nocxx bootstrap elibc_Darwin"
+IUSE="tcl java doc nocxx"
 
 DEPEND="tcl? ( >=dev-lang/tcl-8.4 )
 	java? ( >=virtual/jdk-1.4 )
@@ -44,12 +44,7 @@ src_unpack() {
 	do
 		epatch "${DISTDIR}"/patch."${MY_PV}"."${i}"
 	done
-	# This patch and sed statement only matter when USE=bootstrap is in effect
-	# because the build system is regenerated otherwise.
 	epatch "${FILESDIR}"/"${PN}"-"${SLOT}"-libtool.patch
-	sed -i \
-		-e "s,\(ac_compiler\|\${MAKEFILE_CC}\|\${MAKEFILE_CXX}\|\$CC\)\( *--version\),\1 -dumpversion,g" \
-		"${S}"/../dist/configure
 
 	# use the includes from the prefix
 	epatch "${FILESDIR}"/"${PN}"-4.3-jni-check-prefix-first.patch
@@ -61,28 +56,25 @@ src_unpack() {
 		-e '/jarfile=.*\.jar$/s,(.jar$),-$(LIBVERSION)\1,g' \
 		"${S}"/../dist/Makefile.in
 
-	# During bootstrap, libtool etc might not yet be available
-	if use !bootstrap; then
-		# START of 4.5+earlier specific
-		# Upstream sucks, they normally concat these
-		cd "${S}"/../dist/aclocal
-		for i in *; do ln -s $i ${i%.ac}.m4 ; done ;
-		cd "${S}"/../dist/aclocal_java
-		for i in *; do ln -s $i ${i%.ac}.m4 ; done ;
-		# END of 4.5+earlier specific
-		cd "${S}"/../dist
-		rm -f aclocal/libtool.{m4,ac} aclocal.m4
-		AT_M4DIR="aclocal aclocal_java" eautoreconf
-		# Upstream sucks - they do autoconf and THEN replace the version variables.
-		. ./RELEASE
-		sed -i \
-			-e "s/__EDIT_DB_VERSION_MAJOR__/$DB_VERSION_MAJOR/g" \
-			-e "s/__EDIT_DB_VERSION_MINOR__/$DB_VERSION_MINOR/g" \
-			-e "s/__EDIT_DB_VERSION_PATCH__/$DB_VERSION_PATCH/g" \
-			-e "s/__EDIT_DB_VERSION_STRING__/$DB_VERSION_STRING/g" \
-			-e "s/__EDIT_DB_VERSION_UNIQUE_NAME__/$DB_VERSION_UNIQUE_NAME/g" \
-			-e "s/__EDIT_DB_VERSION__/$DB_VERSION/g" configure
-	fi
+	# START of 4.5+earlier specific
+	# Upstream sucks, they normally concat these
+	cd "${S}"/../dist/aclocal
+	for i in *; do ln -s $i ${i%.ac}.m4 ; done ;
+	cd "${S}"/../dist/aclocal_java
+	for i in *; do ln -s $i ${i%.ac}.m4 ; done ;
+	# END of 4.5+earlier specific
+	cd "${S}"/../dist
+	rm -f aclocal/libtool.{m4,ac} aclocal.m4
+	AT_M4DIR="aclocal aclocal_java" eautoreconf
+	# Upstream sucks - they do autoconf and THEN replace the version variables.
+	. ./RELEASE
+	sed -i \
+		-e "s/__EDIT_DB_VERSION_MAJOR__/$DB_VERSION_MAJOR/g" \
+		-e "s/__EDIT_DB_VERSION_MINOR__/$DB_VERSION_MINOR/g" \
+		-e "s/__EDIT_DB_VERSION_PATCH__/$DB_VERSION_PATCH/g" \
+		-e "s/__EDIT_DB_VERSION_STRING__/$DB_VERSION_STRING/g" \
+		-e "s/__EDIT_DB_VERSION_UNIQUE_NAME__/$DB_VERSION_UNIQUE_NAME/g" \
+		-e "s/__EDIT_DB_VERSION__/$DB_VERSION/g" configure
 }
 
 src_compile() {
@@ -90,9 +82,7 @@ src_compile() {
 
 	use amd64 && myconf="${myconf} --with-mutex=x86/gcc-assembly"
 
-	use bootstrap \
-		&& myconf="${myconf} --disable-cxx" \
-		|| myconf="${myconf} $(use_enable !nocxx cxx)"
+	myconf="${myconf} $(use_enable !nocxx cxx)"
 
 	use tcl \
 		&& myconf="${myconf} --enable-tcl --with-tcl=${EPREFIX}/usr/$(get_libdir)" \
