@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/db
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.275 2009/02/24 16:16:43 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.276 2009/03/14 12:54:49 vapier Exp $
+
+  14 Mar 2009; Mike Frysinger <vapier@gentoo.org> db-4.2.52_p4-r2.ebuild,
+  db-4.2.52_p5.ebuild, db-4.2.52_p5-r1.ebuild, db-4.3.29-r2.ebuild,
+  db-4.3.29_p1.ebuild, db-4.3.29_p1-r1.ebuild, db-4.4.20_p4.ebuild,
+  db-4.4.20_p4-r1.ebuild, db-4.5.20_p2.ebuild, db-4.5.20_p2-r1.ebuild:
+  Drop remaining USE=bootstrap usage #256439.
 
   24 Feb 2009; Joshua Kinard <kumba@gentoo.org> db-4.6.21_p3-r1.ebuild:
   Add ~mips to KEYWORDS
